src/unit_tests/Semantics/success/object-returned.cl
class Main inherits IO {

    a: Int <- 1;

    main(): Object {
        out_string("Hello")
    };
};