src/unit_tests/Semantics/fail/type-intt-not-exist.cl
class Main inherits IO {

    a: Intt <- 1;
    b: Int <- 2;

    main(): Int {
        out_int(a+b)
    };
};